--- a/css/style_2021-6-27.css
+++ b/css/style_2021-6-27.css
@@ -75,6 +75,11 @@ body {
 }
 .list-group-item {
   background-color: #fbb149;
+  
+}
+.list-group-item a:link{
+ 
+  color: #000;
 }
 
 .list-group-item:hover {
